# goofy-animals

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: lib.rs
src/data/: en_adjectives.txt  en_animals.txt
