[package]
name = "goofy-animals"
description = "Generate a name in adjective-adjective-animal form"
authors = ["Mark Vainomaa <mark@zentria.ee>"]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/ZentriaMC/goofy-animals.git"
rust-version = "1.90.0"
readme = "README.md"
keywords = ["random", "naming", "generator", "no-std"]
categories = ["no-std", "rust-patterns", "text-processing"]
documentation = "https://docs.rs/goofy-animals"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
const-str = "0.7.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", optional = true, features = ["os_rng"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
tracing-test = { version = "0.2.5" }
# No clean way to enable feature flags for testing, but this works
goofy-animals = { path = ".", features = ["alloc", "std", "examples", "tracing"] }

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]
examples = ["alloc", "dep:rand_chacha"]
tracing = ["std", "dep:tracing"]

[[bin]]
name = "goofy-animal"
required-features = ["examples"]
